# template_project_python

./: .coverage  pyproject.toml
src/fastapi_zero/: app.py  schema.py
tests/: conftest.py  test_app.py
